--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
   "name": "Gestion Finance Pro",
   "short_name": "FinancePro",
-  "description": "Application sécurisée pour gérer revenus, dépenses et budget.",
+  "description": "Application sécurisée pour gérer tes revenus, dépenses, catégories et historiques.",
   "start_url": "/gestion-finance-prov2/",
   "scope": "/gestion-finance-prov2/",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#1b5e20",
+  "background_color": "#ffffff",
+  "theme_color": "#1a73e8",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "icon-192.png",
